--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -241,3 +241,111 @@
     /* ////////// */
 /* ourPopularClass section end */
 
+/* contactUs section start */
+
+.contactUs{
+    height: 450px;
+    width: 100%;
+    background: url(../img/contactUs.jpg) no-repeat top;
+    background-size: cover;
+}
+
+.contactUs h2{
+    font-size: 55px;
+    color: #56225E;
+    font-weight: bold;
+    margin: 0;
+}
+
+.contactUs h2 span{
+    display: block;
+}
+
+.contactUs p{
+    font-size: 15px;
+    font-weight: 500;
+    
+}
+
+.contactUs a{
+    font-weight: 700;
+    font-size: 18px;
+}
+/* contactUs section end */
+
+/* ourVideo section start */
+.ourVideo{
+   padding: 80px 0 90px 0;
+   background-color: aliceblue;
+}
+
+.ourVideo h2{
+    font-size: 55px;
+    color: #56225E;
+    font-weight: bold;
+    margin: 30px;
+}
+
+.ourVideo .video{
+  
+    background:url(../img/video_img.jpg) no-repeat top;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 14px solid #7470e6;
+}
+
+.ourVideo .playbtn{
+    margin-top: 150px;
+    text-align: center;
+    position: relative;
+}
+
+.playbtn a{
+    box-sizing: content-box;
+    display: inline-block;
+    width: 32px;
+    height: 44px;
+    background: #fff;
+    border-radius: 50%;
+    padding: 18px 20px 18px 28px;
+    position: relative;
+}
+
+.playbtn a span {
+    display: inline-block;
+    position: relative;
+    z-index: 3;
+    width: 0;
+    height: 0;
+    border-left: 32px solid #ee3131;
+    border-top: 22px solid transparent;
+    border-bottom: 22px solid transparent;
+}
+
+
+
+/* ourVideo section end */
+
+/* Gallery Section start */
+
+.gallery{
+    position: relative;
+    background: url(../img/gallery-bg.jpg) no-repeat top;
+    background-size: cover;
+    height: 650px;
+    width: 100%;
+}
+
+.gallery h2{
+    font-size: 55px;
+    color: #56225E;
+    font-weight: bold;
+    margin-top: 40px;
+}
+
+.gallery p{
+    line-height: 30px;
+    font-weight: 200;
+}
+/* Gallery Section end */
